--- a/H2AIndex/Views/PreferencesView.xaml
+++ b/H2AIndex/Views/PreferencesView.xaml
@@ -49,6 +49,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
 
                         <Label Grid.Row="0" Grid.Column="0" Content="Show FPS" />
@@ -58,11 +59,14 @@
                         <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Preferences.ModelViewerOptions.ShowModelInfo}" />
 
                         <Label Grid.Row="2" Grid.Column="0" Content="Default to Flycam" />
-                        <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding DefaultToFlycam}" />
+                        <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding Preferences.ModelViewerOptions.DefaultToFlycam}" />
 
                         <Label Grid.Row="3" Grid.Column="0" Content="FXAA Quality" />
-                        <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding RenderFxaaLevels}" SelectedItem="{Binding Preferences.ModelViewerOptions.RenderFxaaQuality}" />
-                        
+                        <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Preferences.ModelViewerOptions.RenderFxaaLevels}" SelectedItem="{Binding Preferences.ModelViewerOptions.RenderFxaaQuality}" />
+
+                        <Label Grid.Row="4" Grid.Column="0" Content="Texture Quality" />
+                        <Slider Grid.Row="4" Grid.Column="1" Value="{Binding Preferences.ModelViewerOptions.ModelTexturePreviewQuality}" Minimum="0.01" Maximum="1.0" TickFrequency="0.01" />
+
                     </Grid>
                     
                 </GroupBox>
