--- a/H2AIndex/UI/Styles/Controls.GroupBox.xaml
+++ b/H2AIndex/UI/Styles/Controls.GroupBox.xaml
@@ -48,7 +48,7 @@
                                 BorderBrush="{TemplateBinding BorderBrush}" 
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 Grid.ColumnSpan="4" Grid.RowSpan="2" />
-                        <Border x:Name="Header" Grid.Column="1" Padding="3,1,3,0" Grid.Row="0" Grid.RowSpan="2">
+                        <Border x:Name="Header" Grid.Column="1" Grid.ColumnSpan="2" Padding="3,1,3,0" Grid.Row="0" Grid.RowSpan="2">
                             <ContentPresenter VerticalAlignment="Center" ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                         </Border>
                         <ContentPresenter Grid.ColumnSpan="2" Grid.Column="1" Margin="0,3,0,0" Grid.Row="2" x:Name="Contents" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
