--- a/H2AIndex/Controls/ModelViewerControl.xaml
+++ b/H2AIndex/Controls/ModelViewerControl.xaml
@@ -36,8 +36,9 @@
 
             <hx:DirectionalLight3D Direction="{Binding Camera.LookDirection, ElementName=self}" Color="#FFF" />
 
-            <hx:Element3DPresenter Content="{Binding Model, ElementName=self}" >
-            </hx:Element3DPresenter>
+            <hx:SortingGroupModel3D SortingMethod="BoundingBoxCorners" SortingInterval="2" EnableSorting="True">
+                <hx:Element3DPresenter Content="{Binding Model, ElementName=self}" />
+            </hx:SortingGroupModel3D>
         </hx:Viewport3DX>
 
         <StackPanel HorizontalAlignment="Left" Margin="5">
@@ -60,7 +61,7 @@
                    Visibility="{Binding UseFlycam, ElementName=self, Converter={StaticResource BoolVisibilityConverter}}" />
             <Label IsHitTestVisible="False"
                    Visibility="{Binding UseFlycam, ElementName=self, Converter={StaticResource BoolVisibilityConverter}}"
-                   Content="(W/A/S/D) Move | (Shift) 2x Speed | (Q/E) Up/Down | (R/F) Increase/Decrease Speed | (LMB) Look | (RMB) Rotate | (Scroll) Zoom" />
+                   Content="(W/A/S/D) Move | (Q/E) Up/Down | (Shift) 2x Speed | (R/F) +/- Speed | (LMB) Look" />
         </StackPanel>
     </Grid>
 </UserControl>
