--- a/H2AIndex/UI/Styles/Icons.xaml
+++ b/H2AIndex/UI/Styles/Icons.xaml
@@ -61,4 +61,28 @@
         </Path.Data>
     </Path>
 
+    <Path x:Key="Icon_Wireframe">
+        <Path.Data>
+            m 226.19946,16.656571 a 473.96004,333.37897 0 0 1 0,387.232509 M 59,333.21514 a 260,260 0 0 1 302,0 M 197.17143,14.79354 a 477.24462,335.68933 0 0 0 0,389.91607 M 209,15 a 195,195 0 1 0 2,0 z m 1,0 V 405 M 405,210 H 15 M 59,92.669492 a 260,260 0 0 0 302,0 M 361,330
+        </Path.Data>
+    </Path>
+
+    <Path x:Key="Icon_Camera">
+        <Path.Data>
+            M488.3,142.5v203.1c0,15.7-17,25.5-30.6,17.7l-84.6-48.8v13.9c0,41.8-33.9,75.7-75.7,75.7H75.7C33.9,404.1,0,370.2,0,328.4   V159.9c0-41.8,33.9-75.7,75.7-75.7h221.8c41.8,0,75.7,33.9,75.7,75.7v13.9l84.6-48.8C471.3,117,488.3,126.9,488.3,142.5z
+        </Path.Data>
+    </Path>
+
+    <Path x:Key="Icon_Circle">
+        <Path.Data>
+            M14,7.5c0,3.5899-2.9101,6.5-6.5,6.5S1,11.0899,1,7.5S3.9101,1,7.5,1S14,3.9101,14,7.5z
+        </Path.Data>
+    </Path>
+
+    <Path x:Key="Icon_CircleOutline">
+        <Path.Data>
+            M500,10C229.4,10,10,229.4,10,500c0,270.6,219.4,490,490,490c270.6,0,490-219.4,490-490C990,229.4,770.6,10,500,10z M815,815c-40.9,40.9-88.6,73.1-141.6,95.5c-54.9,23.2-113.2,35-173.4,35c-60.2,0-118.5-11.8-173.4-35C273.6,888,225.9,855.9,185,815s-73-88.6-95.5-141.6c-23.2-54.9-35-113.2-35-173.4c0-60.2,11.8-118.5,35-173.4c22.4-53,54.6-100.7,95.5-141.6s88.6-73,141.6-95.5c54.9-23.2,113.2-35,173.4-35c60.2,0,118.5,11.8,173.4,35c53,22.4,100.7,54.6,141.6,95.5c40.9,40.9,73,88.6,95.5,141.6c23.2,54.9,35,113.2,35,173.4c0,60.2-11.8,118.5-35,173.4C888,726.4,855.9,774.1,815,815z
+        </Path.Data>
+    </Path>
+
 </ResourceDictionary>
