--- a/H2AIndex/Views/ModelExportOptionsView.xaml
+++ b/H2AIndex/Views/ModelExportOptionsView.xaml
@@ -66,40 +66,49 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="3" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="3" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" Content="File Format" />
                 <ComboBox Grid.Row="0" Grid.Column="1"
                           SelectedIndex="0"
                           ItemsSource="{Binding ModelFileFormats}"
-                          SelectedItem="{Binding ModelOptions.OutputFileFormat}"/>
+                          SelectedItem="{Binding ModelOptions.OutputFileFormat}" />
 
                 <Label Grid.Row="2" Grid.Column="0" 
-                       Content="Export Material Definitions" />
+                       Content="Overwrite Existing" />
                 <CheckBox Grid.Row="2" Grid.Column="1" 
-                          IsChecked="{Binding ModelOptions.ExportMaterialDefinitions}" />
+                          IsChecked="{Binding ModelOptions.OverwriteExisting}" />
                 
                 <Label Grid.Row="4" Grid.Column="0" 
-                       Content="Overwrite Existing" />
-                <CheckBox Grid.Row="4" Grid.Column="1" 
-                          IsChecked="{Binding ModelOptions.OverwriteExisting}" />
+                       Content="Export Textures" />
+                <CheckBox Grid.Row="4" Grid.Column="1"
+                          IsChecked="{Binding ModelOptions.ExportTextures}" />
+                
+                <Label Grid.Row="6" Grid.Column="0" 
+                       Content="Export Material Definitions" />
+                <CheckBox Grid.Row="6" Grid.Column="1" 
+                          IsChecked="{Binding ModelOptions.ExportMaterialDefinitions}" />
+                
+                
 
-                <Label Grid.Row="6" Grid.Column="0">
+                <Label Grid.Row="8" Grid.Column="0">
                     <TextBlock>
                         <Run>Remove LODs</Run>
                         <Hyperlink Command="{Binding ExplainLODsCommand}">?</Hyperlink>
                     </TextBlock>
                 </Label>
-                <CheckBox Grid.Row="6" Grid.Column="1"
+                <CheckBox Grid.Row="8" Grid.Column="1"
                           IsChecked="{Binding ModelOptions.RemoveLODs}" />
 
-                <Label Grid.Row="8" Grid.Column="0">
+                <Label Grid.Row="10" Grid.Column="0">
                     <TextBlock>
                         <Run>Remove Volumes</Run>
                         <Hyperlink Command="{Binding ExplainVolumesCommand}">?</Hyperlink>
                     </TextBlock>
                 </Label>
-                <CheckBox Grid.Row="8" Grid.Column="1"
+                <CheckBox Grid.Row="10" Grid.Column="1"
                           IsChecked="{Binding ModelOptions.RemoveVolumes}" />
 
             </Grid>
@@ -108,7 +117,8 @@
         <GroupBox Header="Texture Options" 
                   Grid.Row="2" 
                   Grid.Column="1"
-                  Margin="2,5,5,5">
+                  Margin="2,5,5,5"
+                  IsEnabled="{Binding ModelOptions.ExportTextures}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*" />
@@ -130,9 +140,13 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" 
-                       Content="Export Textures" />
-                <CheckBox Grid.Row="0" Grid.Column="1"
-                          IsChecked="{Binding ModelOptions.ExportTextures}" />
+                       IsEnabled="{Binding ModelOptions.ExportTextures}"
+                       Content="Texture Format" />
+                <ComboBox Grid.Row="0" Grid.Column="1"
+                          SelectedIndex="0"
+                          ItemsSource="{Binding TextureFileFormats}"
+                          SelectedItem="{Binding TextureOptions.OutputFileFormat}"
+                          IsEnabled="{Binding ModelOptions.ExportTextures}"/>
 
                 <Label Grid.Row="2" Grid.Column="0" 
                        Content="Overwrite Existing"
@@ -142,38 +156,37 @@
                           IsEnabled="{Binding ModelOptions.ExportTextures}" />
                 
                 <Label Grid.Row="4" Grid.Column="0" 
-                       IsEnabled="{Binding ModelOptions.ExportTextures}"
-                       Content="Texture Format" />
+                       Content="Normal Map Format"
+                       IsEnabled="{Binding TextureOptions.OutputFileFormat, 
+                                           Converter={StaticResource InequalityBoolConverter}, 
+                                           ConverterParameter={x:Static enums:TextureFileFormat.DDS}}" />
                 <ComboBox Grid.Row="4" Grid.Column="1"
-                          SelectedIndex="0"
-                          ItemsSource="{Binding TextureFileFormats}"
-                          SelectedItem="{Binding TextureOptions.OutputFileFormat}"
-                          IsEnabled="{Binding ModelOptions.ExportTextures}"/>
-
-                <Label Grid.Row="6" Grid.Column="0" 
-                       IsEnabled="{Binding ModelOptions.ExportTextures}"
-                       Content="Normal Map Format" />
-                <ComboBox Grid.Row="6" Grid.Column="1"
                           SelectedIndex="0"
                           ItemsSource="{Binding NormalMapFormats}"
                           SelectedItem="{Binding TextureOptions.OutputNormalMapFormat}"
-                          IsEnabled="{Binding ModelOptions.ExportTextures}"/>
+                          IsEnabled="{Binding TextureOptions.OutputFileFormat, 
+                                              Converter={StaticResource InequalityBoolConverter}, 
+                                              ConverterParameter={x:Static enums:TextureFileFormat.DDS}}"/>
 
-                <Label Grid.Row="8" Grid.Column="0" 
+                <Label Grid.Row="6" Grid.Column="0" 
                        Content="Recalculate Z Channel"
-                       IsEnabled="{Binding ModelOptions.ExportTextures}" />
-                <CheckBox Grid.Row="8" Grid.Column="1"
+                       IsEnabled="{Binding TextureOptions.OutputFileFormat, 
+                                           Converter={StaticResource InequalityBoolConverter}, 
+                                           ConverterParameter={x:Static enums:TextureFileFormat.DDS}}" />
+                <CheckBox Grid.Row="6" Grid.Column="1"
                           IsChecked="{Binding TextureOptions.RecalculateNormalMapZChannel}"
-                          IsEnabled="{Binding ModelOptions.ExportTextures}"/>
+                          IsEnabled="{Binding TextureOptions.OutputFileFormat, 
+                                              Converter={StaticResource InequalityBoolConverter}, 
+                                              ConverterParameter={x:Static enums:TextureFileFormat.DDS}}"/>
                 
-                <Label Grid.Row="10" Grid.Column="0"
+                <Label Grid.Row="8" Grid.Column="0"
                        IsEnabled="{Binding ModelOptions.ExportTextures}">
                     <TextBlock>
                         <Run>Export Texture Definitions</Run>
                         <Hyperlink Command="{Binding ExplainTextureDefinitionsCommand}">?</Hyperlink>
                     </TextBlock>
                 </Label>
-                <CheckBox Grid.Row="10" Grid.Column="1"
+                <CheckBox Grid.Row="8" Grid.Column="1"
                           IsChecked="{Binding TextureOptions.ExportTextureDefinition}"
                           IsEnabled="{Binding ModelOptions.ExportTextures}" />
 
