--- a/H2AIndex/Views/MainView.xaml
+++ b/H2AIndex/Views/MainView.xaml
@@ -27,7 +27,7 @@
                           Command="{Binding OpenDirectoryCommand}" />
             </MenuItem>
             <MenuItem Header="Tools">
-                <MenuItem Header="Bulk Export Models" />
+                <MenuItem Header="Bulk Export Models" Command="{Binding BulkExportModelsCommand}" />
                 <MenuItem Header="Bulk Export Textures" Command="{Binding BulkExportTexturesCommand}" />
                 <MenuItem Header="Dump Files" />
                 <Separator />
