--- a/H2AIndex/Controls/ModelViewerControl.xaml
+++ b/H2AIndex/Controls/ModelViewerControl.xaml
@@ -7,7 +7,8 @@
              xmlns:local="clr-namespace:H2AIndex.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             x:Name="self">
+             x:Name="self"
+             Focusable="True">
     <Grid Background="Transparent">
         <hx:Viewport3DX x:Name="ViewportControl"
                         Grid.Column="0"
